# BrightPlayer

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/include/libavutil/: ffversion.h
app/src/androidTest/java/bright/me/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/bright/me/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/bright/me/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
